--- a/index.html
+++ b/index.html
@@ -235,46 +235,46 @@
 		</div>
 
 		<!--round categories container-->
-		<div id="roundCategCont" class="d-flex p-2 mt-md-3 justify-content-evenly" style="flex-wrap: wrap">
-			<a href="#" target="" class="d-flex justify-content-center align-items-center">
+		<div class="d-flex justify-content-center px-4 mt-md-3">
+			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
 					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
-					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1.5em">digital</figcaption>
+					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em;">digital</figcaption>
 				</figure>
 			</a>
 
-			<a href="#" target="" class="d-flex justify-content-center align-items-center">
+			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
 					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
-					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1.5em">fashion</figcaption>
+					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em">fashion</figcaption>
 				</figure>
 			</a>
 
-			<a href="#" target="" class="d-flex justify-content-center align-items-center">
+			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
 					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
-					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1.5em">food</figcaption>
+					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em">food</figcaption>
 				</figure>
 			</a>
 
-			<a href="#" target="" class="d-flex justify-content-center align-items-center">
+			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
 					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
-					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1.5em">health</figcaption>
+					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em">health</figcaption>
 				</figure>
 			</a>
 
-			<a href="#" target="" class="d-flex justify-content-center align-items-center">
+			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
 					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
-					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1.5em">spa</figcaption>
+					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em">spa</figcaption>
 				</figure>
 			</a>
 
-			<a href="#" target="" class="d-flex justify-content-center align-items-center">
+			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
 					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
-					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1.5em">travel</figcaption>
+					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em">travel</figcaption>
 				</figure>
 			</a>
 
