--- a/index.html
+++ b/index.html
@@ -375,8 +375,12 @@
 				<div class="position-relative w-100 border border-1 rounded-bottom">
 					<img src="_img/sale.jfif" class="w-100 p-3" alt="">
 					<span class="position-absolute bg-warning" style="right: 4rem; top: 4rem">-42%</span>
-					<p class="spcTxtTop">lorem ipsum dolor</p>
-					<p class="spcTxtMid">ut enim ad minim veniam</p>
+					<p class="mb-0 ps-3">lorem ipsum dolor</p>
+					<p class="mb-0 ps-3">ut enim ad minim veniam</p>
+					<label class="px-3 mb-3">
+						<span class="fw-bold">$116.00</span>
+						<span class="text-secondary" style="text-decoration: line-through">$200</span>
+					</label>
 				</div>
 			</div>
 		</div>
