--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 				</div>
 			</div>
 
-			<div class="h-50 my-2">
+			<div class="my-2" style="height: 40rem">
 				<img src="_img/sale.jfif" class="h-100 w-100 rounded" alt="the body shop - mother nature's seal of approval">
 			</div>
 
@@ -387,24 +387,24 @@
 
 		<!--hot deal container-->
 		<div class="p-2 col-md-9">
-			<div id="hotDealTxtCont" class="">
-				<label id="hotDealLbl">
-					<i class="material-icons">whatshot</i>
-					<h1 id="hotDealTxt">hot deal</h1>
+			<div class="px-2 d-flex align-items-center justify-content-between W-100 border-3 border-bottom border-primary">
+				<label class="d-flex align-items-center text-body">
+					<i class="material-icons me-3">whatshot</i>
+					<h1 class="text-uppercase mb-0">hot deal</h1>
 				</label>
-				<div id="counter">
-					<i class="material-icons">timer</i>
-					<span>|</span>
-					<span id="counterTxt">352d : 23h : 54m : 52s</span>
-				</div>
+				<label class="p-2 mt-2 d-flex justify-content-end bg-primary text-white rounded-top text-center">
+					<i class="material-icons p-sm-1">timer</i>
+					<span class="p-sm-1">|</span>
+					<span class="p-sm-1">352d : 23h : 54m</span>
+				</label>
 			</div>
 
-			<div id="hotDealOfferCont">
-				<div class="hotOffers">
-					<img src="#" class="hotImg" alt="">
-					<div class="hotTxt">
-						<p class="hotTxtTop">lorem ipsum dolor</p>
-						<p class="hotTxtMid">ut enim ad minim veniam</p>
+			<div class="p-2 d-md-flex justify-content-around">
+				<div class="col p-3 m-2 d-flex row justify-content-around">
+					<img src="_img/sale.jfif" class="hotImg" alt="">
+					<div class="mt-2">
+						<p class="mb-0">lorem ipsum dolor</p>
+						<p class="mb-0">ut enim ad minim veniam</p>
 						<div class="rate">
 							<i class="material-icons starRate">star_rate</i>
 							<i class="material-icons starRate">star_rate</i>
@@ -412,18 +412,18 @@
 							<i class="material-icons starRate">star_rate</i>
 							<i class="material-icons starRate">star_rate</i>
 						</div>
-						<label id="spcTxtValCont">
-							<span class="spcTxtVal">$80.00</span>
-							<span class="spcTxtValDisc">$100.00</span>
+						<label>
+							<span class="fw-bold">$50.00</span>
+							<span class="text-secondary" style="text-decoration: line-through">$75</span>
 						</label>
 					</div>
 				</div>
 
-				<div class="hotOffers">
-					<img src="#" class="hotImg" alt="">
-					<div class="hotTxt">
-						<p class="hotTxtTop">lorem ipsum dolor</p>
-						<p class="hotTxtMid">ut enim ad minim veniam</p>
+				<div class="col p-3 m-2 d-flex row justify-content-around">
+					<img src="_img/sale.jfif" class="hotImg" alt="">
+					<div class="mt-2">
+						<p class="mb-0">lorem ipsum dolor</p>
+						<p class="mb-0">ut enim ad minim veniam</p>
 						<div class="rate">
 							<i class="material-icons starRate">star_rate</i>
 							<i class="material-icons starRate">star_rate</i>
@@ -431,18 +431,18 @@
 							<i class="material-icons starRate">star_border</i>
 							<i class="material-icons starRate">star_border</i>
 						</div>
-						<label id="spcTxtValCont">
-							<span class="spcTxtVal">$80.00</span>
-							<span class="spcTxtValDisc">$100.00</span>
+						<label>
+							<span class="fw-bold">$80.00</span>
+							<span class="text-secondary" style="text-decoration: line-through">$100</span>
 						</label>
 					</div>
 				</div>
 
-				<div class="hotOffers">
-					<img src="#" class="hotImg" alt="">
-					<div class="hotTxt">
-						<p class="hotTxtTop">lorem ipsum dolor</p>
-						<p class="hotTxtMid">ut enim ad minim veniam</p>
+				<div class="col p-3 m-2 d-flex row justify-content-around">
+					<img src="_img/sale.jfif" class="hotImg" alt="">
+					<div class="mt-2">
+						<p class="mb-0">lorem ipsum dolor</p>
+						<p class="mb-0">ut enim ad minim veniam</p>
 						<div class="rate">
 							<i class="material-icons starRate">star_border</i>
 							<i class="material-icons starRate">star_border</i>
@@ -450,18 +450,18 @@
 							<i class="material-icons starRate">star_border</i>
 							<i class="material-icons starRate">star_border</i>
 						</div>
-						<label id="spcTxtValCont">
-							<span class="spcTxtVal">$80.00</span>
-							<span class="spcTxtValDisc">$100.00</span>
+						<label>
+							<span class="fw-bold">$75.00</span>
+							<span class="text-secondary" style="text-decoration: line-through">$110</span>
 						</label>
 					</div>
 				</div>
 
-				<div class="hotOffers">
-					<img src="#" class="hotImg" alt="">
-					<div class="hotTxt">
-						<p class="hotTxtTop">lorem ipsum dolor</p>
-						<p class="hotTxtMid">ut enim ad minim veniam</p>
+				<div class="col p-3 m-2 d-flex row justify-content-around">
+					<img src="_img/sale.jfif" class="hotImg" alt="">
+					<div class="mt-2">
+						<p class="mb-0">lorem ipsum dolor</p>
+						<p class="mb-0">ut enim ad minim veniam</p>
 						<div class="rate">
 							<i class="material-icons starRate">star_border</i>
 							<i class="material-icons starRate">star_border</i>
@@ -469,9 +469,9 @@
 							<i class="material-icons starRate">star_border</i>
 							<i class="material-icons starRate">star_border</i>
 						</div>
-						<label id="spcTxtValCont">
-							<span class="spcTxtVal">$80.00</span>
-							<span class="spcTxtValDisc">$100.00</span>
+						<label>
+							<span class="fw-bold">$95.00</span>
+							<span class="text-secondary" style="text-decoration: line-through">$150</span>
 						</label>
 					</div>
 				</div>
