--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 		</div>
 
 		<!--round categories container-->
-		<div class="d-flex justify-content-center px-4 m-4">
+		<div class="d-flex justify-content-center px-4 m-5">
 			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
 					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
@@ -284,8 +284,11 @@
 
 		</div>
 
+
+<div class="row">
+	<div class="col-md-3">
 		<!--side container-->
-		<div class="p-2 row col-md-3">
+		<div>
 			<div class="d-flex">
 				<img src="_img/qrcode.jpg" alt="" class="ms-2 w-25">
 				<div class="ms-2">
@@ -384,13 +387,15 @@
 				</div>
 			</div>
 		</div>
+	</div>
 
+	<div class="col-md-9">
 		<!--hot deal container-->
-		<div class="p-2 col-md-9">
-			<div class="px-2 d-flex align-items-center justify-content-between W-100 border-3 border-bottom border-primary">
+		<div class="row">
+			<div class="d-flex align-items-center justify-content-between col-md-12 border-3 border-bottom border-primary">
 				<label class="d-flex align-items-center text-body">
-					<i class="material-icons me-3">whatshot</i>
-					<h1 class="text-uppercase mb-0">hot deal</h1>
+					<i class="material-icons me-sm-3">whatshot</i>
+					<h2 class="text-uppercase mb-0">hot deal</h1>
 				</label>
 				<label class="p-2 mt-2 d-flex justify-content-end bg-primary text-white rounded-top text-center">
 					<i class="material-icons p-sm-1">timer</i>
@@ -400,7 +405,7 @@
 			</div>
 
 			<div class="p-2 d-md-flex justify-content-around">
-				<div class="col p-3 m-2 d-flex row justify-content-around">
+				<div class="col m-2 row justify-content-around">
 					<img src="_img/sale.jfif" class="hotImg" alt="">
 					<div class="mt-2">
 						<p class="mb-0">lorem ipsum dolor</p>
@@ -419,7 +424,7 @@
 					</div>
 				</div>
 
-				<div class="col p-3 m-2 d-flex row justify-content-around">
+				<div class="col m-2 row justify-content-around">
 					<img src="_img/sale.jfif" class="hotImg" alt="">
 					<div class="mt-2">
 						<p class="mb-0">lorem ipsum dolor</p>
@@ -438,7 +443,7 @@
 					</div>
 				</div>
 
-				<div class="col p-3 m-2 d-flex row justify-content-around">
+				<div class="col m-2 row justify-content-around">
 					<img src="_img/sale.jfif" class="hotImg" alt="">
 					<div class="mt-2">
 						<p class="mb-0">lorem ipsum dolor</p>
@@ -457,7 +462,7 @@
 					</div>
 				</div>
 
-				<div class="col p-3 m-2 d-flex row justify-content-around">
+				<div class="col m-2 row justify-content-around">
 					<img src="_img/sale.jfif" class="hotImg" alt="">
 					<div class="mt-2">
 						<p class="mb-0">lorem ipsum dolor</p>
@@ -479,80 +484,56 @@
 		</div>
 
 		<!--promotional banner container-->
-		<div class="p-2 col-md-9">
-			<img src="#" alt="banner with a promotional image. 50% discount guaranted on some items">
+		<div class="p-2 col-md-12 mx-auto">
+			<img src="_img/discount.jfif" class="w-100" alt="banner with a promotional image. 50% discount guaranted on some items">
 		</div>
 
 		<!--variety container-->
-		<div class="p-2 col-md-9">
-			<div id="variCont" class="">
-				<label id="variLbl">
-					<i class="material-icons">shirt</i>
-					<h1 id="variTxt">fashion & accessories</h1>
+		<div class="p-2 col-md-12 row align-items-center justify-content-between">
+			<div id="variCont" class="d-flex justify-content-between border-3 border-bottom border-primary">
+				<label class="d-flex align-items-center">
+					<i class="material-icons me-sm-3">loyalty</i>
+					<h2 class="text-body text-uppercase mb-0">fashion & accessories</h1>
 				</label>
-				<div id="arrows" class="">
-					<i id="prev" class="material-icons" role="button">keyboard_arrow_left</i>
-					<i id="prev" class="material-icons" role="button">keyboard_arrow_right</i>
+				<div id="arrows" class="d-flex align-items-center mt-5">
+					<i id="prev" class="material-icons bg-primary text-white rounded-top me-1" role="button">keyboard_arrow_left</i>
+					<i id="prev" class="material-icons bg-primary text-white rounded-top" role="button">keyboard_arrow_right</i>
 				</div>
 			</div>
 
 			<!--miniImages buttons-->
-			<div class="">
-				<figure class="varImgsFig">
-					<button class="varImgsFigBtn">
-						<img src="#" alt="">
-						<figcaption>bags</figcaption>
+			<div class="row col-md-12">
+					<button class="col p-1 my-3 mx-2 bg-none border-0">
+						<img src="_img/button.jpg" class="w-100" alt="">
 					</button>
-				</figure>
 
-				<figure class="varImgsFig">
-					<button class="varImgsFigBtn">
-						<img src="#" alt="">
-						<figcaption>dress ladies</figcaption>
+					<button class="col p-1 my-3 mx-2 bg-none border-0">
+						<img src="_img/button.jpg" class="w-100" alt="">
 					</button>
-				</figure>
 
-				<figure class="varImgsFig">
-					<button class="varImgsFigBtn">
-						<img src="#" alt="">
-						<figcaption>jeans</figcaption>
+					<button class="col p-1 my-3 mx-2 bg-none border-0">
+						<img src="_img/button.jpg" class="w-100" alt="">
 					</button>
-				</figure>
 
-				<figure class="varImgsFig">
-					<button class="varImgsFigBtn">
-						<img src="#" alt="">
-						<figcaption>men fashion</figcaption>
+					<button class="col p-1 my-3 mx-2 bg-none border-0">
+						<img src="_img/button.jpg" class="w-100" alt="">
 					</button>
-				</figure>
 
-				<figure class="varImgsFig">
-					<button class="varImgsFigBtn">
-						<img src="#" alt="">
-						<figcaption>t-shirt</figcaption>
+					<button class="col p-1 my-3 mx-2 bg-none border-0">
+						<img src="_img/button.jpg" class="w-100" alt="">
 					</button>
-				</figure>
 
-				<figure class="varImgsFig">
-					<button class="varImgsFigBtn">
-						<img src="#" alt="">
-						<figcaption>trending</figcaption>
+					<button class="col p-1 my-3 mx-2 bg-none border-0">
+						<img src="_img/button.jpg" class="w-100" alt="">
 					</button>
-				</figure>
 
-				<figure class="varImgsFig">
-					<button class="varImgsFigBtn">
-						<img src="#" alt="">
-						<figcaption>western wear</figcaption>
+					<button class="col p-1 my-3 mx-2 bg-none border-0">
+						<img src="_img/button.jpg" class="w-100" alt="">
 					</button>
-				</figure>
 
-				<figure class="varImgsFig">
-					<button class="varImgsFigBtn">
-						<img src="#" alt="">
-						<figcaption>women fashion</figcaption>
+					<button class="col p-1 my-3 mx-2 bg-none border-0">
+						<img src="_img/button.jpg" class="w-100" alt="">
 					</button>
-				</figure>
 			</div>
 
 			<!--offer container featuring 4 items at a time-->
@@ -1407,9 +1388,11 @@
 			</div>
 
 		</div>
+	</div>
+</div>
 
 		<!--footer-->
-		<footer class="p-2 col-md-9">
+		<footer class="p-2 col-md-9 text-center">
 			<p>desenvolvido por <a href="https://jeimoal.github.io/portifolio/">Jeison Moura</a></p>
 		</footer>
 	</div>
