--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 			<div class="d-flex align-items-center justify-content-between col-md-12 border-3 border-bottom border-primary">
 				<label class="d-flex align-items-center text-body">
 					<i class="material-icons me-sm-3">whatshot</i>
-					<h2 class="text-uppercase mb-0">hot deal</h1>
+					<h2 class="text-uppercase mb-0">hot deal</h2>
 				</label>
 				<label class="p-2 mt-2 d-flex justify-content-end bg-primary text-white rounded-top text-center">
 					<i class="material-icons p-sm-1">timer</i>
@@ -489,11 +489,11 @@
 		</div>
 
 		<!--variety container-->
-		<div class="p-2 col-md-12 row align-items-center justify-content-between">
+		<div class="p-2 col-md-12 row">
 			<div id="variCont" class="d-flex justify-content-between border-3 border-bottom border-primary">
 				<label class="d-flex align-items-center">
 					<i class="material-icons me-sm-3">loyalty</i>
-					<h2 class="text-body text-uppercase mb-0">fashion & accessories</h1>
+					<h2 class="text-body text-uppercase mb-0">fashion & accessories</h2>
 				</label>
 				<div id="arrows" class="d-flex align-items-center mt-5">
 					<i id="prev" class="material-icons bg-primary text-white rounded-top me-1" role="button">keyboard_arrow_left</i>
@@ -502,37 +502,37 @@
 			</div>
 
 			<!--miniImages buttons-->
-			<div class="row col-md-12">
-					<button class="col p-1 my-3 mx-2 bg-none border-0">
-						<img src="_img/button.jpg" class="w-100" alt="">
+			<div class="d-flex justify-content-between">
+					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
+						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
 
-					<button class="col p-1 my-3 mx-2 bg-none border-0">
-						<img src="_img/button.jpg" class="w-100" alt="">
+					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
+						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
 
-					<button class="col p-1 my-3 mx-2 bg-none border-0">
-						<img src="_img/button.jpg" class="w-100" alt="">
+					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
+						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
 
-					<button class="col p-1 my-3 mx-2 bg-none border-0">
-						<img src="_img/button.jpg" class="w-100" alt="">
+					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
+						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
 
-					<button class="col p-1 my-3 mx-2 bg-none border-0">
-						<img src="_img/button.jpg" class="w-100" alt="">
+					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
+						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
 
-					<button class="col p-1 my-3 mx-2 bg-none border-0">
-						<img src="_img/button.jpg" class="w-100" alt="">
+					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
+						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
 
-					<button class="col p-1 my-3 mx-2 bg-none border-0">
-						<img src="_img/button.jpg" class="w-100" alt="">
+					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
+						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
 
-					<button class="col p-1 my-3 mx-2 bg-none border-0">
-						<img src="_img/button.jpg" class="w-100" alt="">
+					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
+						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
 			</div>
 
